--- a/package.json
+++ b/package.json
@@ -6,10 +6,13 @@
     "@testing-library/jest-dom": "^5.11.5",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "dayjs": "^1.9.4",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.0",
+    "react-textarea-autosize": "^8.2.0",
+    "react-toastify": "^6.0.9",
     "sass": "^1.27.0",
     "sass-loader": "^10.0.4",
     "web-vitals": "^0.2.4"
