--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-toastify": "^6.0.9",
     "sass": "^1.27.0",
     "sass-loader": "^10.0.4",
+    "uuid": "^8.3.1",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
