--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.0",
+    "react-spring": "^8.0.27",
     "react-textarea-autosize": "^8.2.0",
     "react-toastify": "^6.0.9",
     "sass": "^1.27.0",
