--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-scripts": "4.0.0",
     "react-spring": "^8.0.27",
     "react-toastify": "^6.0.9",
+    "react-truncate": "^2.4.0",
     "sass": "^1.27.0",
     "sass-loader": "^10.0.4",
     "uuid": "^8.3.1",
