--- a/package.json
+++ b/package.json
@@ -7,6 +7,10 @@
     "@material-ui/styles": "^4.10.0",
     "@testing-library/jest-dom": "^5.11.5",
     "@testing-library/user-event": "^12.1.10",
+    "@types/jest": "^26.0.15",
+    "@types/node": "^14.14.10",
+    "@types/react": "^17.0.0",
+    "@types/react-dom": "^17.0.0",
     "cloudinary-react": "^1.6.7",
     "dayjs": "^1.9.4",
     "react": "^17.0.1",
@@ -17,6 +21,7 @@
     "react-toastify": "^6.1.0",
     "sass": "^1.27.0",
     "sass-loader": "^10.0.4",
+    "typescript": "^4.1.2",
     "uuid": "^8.3.1",
     "web-vitals": "^0.2.4"
   },
