--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "dependencies": {
     "@material-ui/core": "^4.11.0",
     "@material-ui/styles": "^4.10.0",
+    "@reach/combobox": "^0.16.1",
+    "@react-google-maps/api": "^2.2.0",
     "@testing-library/jest-dom": "^5.11.5",
     "@testing-library/user-event": "^12.1.10",
     "@types/jest": "^26.0.15",
@@ -12,6 +14,7 @@
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "cloudinary-react": "^1.6.7",
+    "date-fns": "^2.23.0",
     "dayjs": "^1.9.4",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
@@ -22,6 +25,7 @@
     "sass": "^1.27.0",
     "sass-loader": "^10.0.4",
     "typescript": "^4.1.2",
+    "use-places-autocomplete": "^1.9.4",
     "uuid": "^8.3.1",
     "web-vitals": "^0.2.4"
   },
